# codurance-2025-ai-hackathon-ecommerce

./: .gitignore  README.md  fashion_items.db  pyproject.toml
data/: styles.csv
fe/: package-lock.json  package.json
fe/src/: App.css  App.js  App.test.js  Cart.css  Cart.js  Cart.test.js
src/: app.py  db_import.py
tests/: test_app.py  test_db_seed.py
